Fixed some overflow issues Updated where the Background image goes Updated some of the padding and margin from the fix

--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -18,11 +18,17 @@ body {
 
 .main-div {
     height: 100vh;
+    background-image: url("../images/dice.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    overflow: hidden;
 }
 
 .main-container {
     height: 100vh;
     text-align: center;
+    
 }
 
 .header-container {
@@ -52,17 +58,6 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin: auto;
     font-size: 38px;
-}
-
-.content-container {
-    height: 100vh;
-    padding-bottom: 60px;
-    margin-top: 40px;
-    background-image: url("../images/dice.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center; 
-    overflow-y: scroll;
 }
 
 .app {
