--- a/src/components/event-id/event-id.css
+++ b/src/components/event-id/event-id.css
@@ -6,7 +6,7 @@ h4 {
 .event-host-container,
 .event-date-address-container,
 .event-players-joined-container {
-    margin: 5px;
+    margin: 10px;
     background-color: rgba(217, 225, 232, 0.750);
     border-radius: 5px;
     font-size: 22px;
