--- a/src/components/events/events.css
+++ b/src/components/events/events.css
@@ -67,7 +67,7 @@ p.events-date-time{
         padding-top: 60px;
     }
     .events-container {
-        margin: 15px 600px;
+        margin: 15px 200px;
     }
     p.events-title, 
     p.events-player-count, 
